# atomwrite

./: .gitignore  AGENTS.pt-BR.md  ARCHITECTURE.md  ARCHITECTURE.pt-BR.md  CHANGELOG.md  CHANGELOG.pt-BR.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.pt-BR.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  Cargo.toml  INTEGRATIONS.md  INTEGRATIONS.pt-BR.md  LICENSE  LICENSE-APACHE  README.md  README.pt-BR.md  SECURITY.md  SECURITY.pt-BR.md  build.rs  deny.toml  llms-full.txt  llms.pt-BR.txt  llms.txt  rust-toolchain.toml
.cargo/: config.toml.example
.github/workflows/: bench.yml  ci.yml
benches/: hash_benchmark.rs  read_benchmark.rs
docs/: AGENTS.md  AGENTS.pt-BR.md  COOKBOOK.md  COOKBOOK.pt-BR.md  CROSS_PLATFORM.md  CROSS_PLATFORM.pt-BR.md  HOW_TO_USE.md  HOW_TO_USE.pt-BR.md  INSTALL.md  INSTALL.pt-BR.md  MIGRATION-v0.1.20-to-v0.1.21.md  MIGRATION-v0.1.21-to-v0.1.22.md  MIGRATION-v0.1.21-to-v0.1.22.pt-BR.md  MIGRATION.md  MIGRATION.pt-BR.md  TESTING.md  TESTING.pt-BR.md
docs/decisions/: 0019-tree-sitter-language-pack.md  0020-wal-sidecar.md  0021-v14-query-outline-no-s-expr.md  0022-g72-tree-sitter-replaces-heuristic.md  0023-g114-wal-consultive.md  0024-get-toml-path-manual.md  0025-positions-only-in-query-tree.md  0026-g117-edit-multi-pair-fuzzy-partial.md  0027-g118-write-path-resolution.md  0028-g119-wal-cleanup-intelligent.md  0029-g120-empty-stdin-guard.md  0030-v0-1-18-g118-replace-pre-validation-g120-l3-tests-g117-edge-cases.pt-BR.md  0031-g121-path-resolution-helper.md  0031-g121-path-resolution-helper.pt-BR.md  0032-query-sexp-real-implementation.md  0032-query-sexp-real-implementation.pt-BR.md  0033-v0-1-19-exit-code-naming-drift-consolidation.md  0033-v0-1-19-exit-code-naming-drift-consolidation.pt-BR.md  0034-help-driven-testing-anti-pattern.md  0034-help-driven-testing-anti-pattern.pt-BR.md  0035-write-intention-guards.md  0035-write-intention-guards.pt-BR.md  0036-edit-partial-coverage.md  0036-edit-partial-coverage.pt-BR.md  0037-global-locale-rename.md  0037-global-locale-rename.pt-BR.md  0038-backup-cumprido-deleta.md  0038-backup-cumprido-deleta.pt-BR.md  0039-edit-loop-helper.md  0039-edit-loop-helper.pt-BR.md  0040-prune-backups-subcommand.md  0040-prune-backups-subcommand.pt-BR.md  0041-allow-hyphen-values-edit.md  0041-allow-hyphen-values-edit.pt-BR.md  0042-backup-by-default.md  0042-backup-by-default.pt-BR.md  0043-shrink-guard.md  0043-shrink-guard.pt-BR.md  0044-edit-old-file-new-file.md  0044-edit-old-file-new-file.pt-BR.md  (+7 more)
docs/schemas/: README.md  apply-result.schema.json  backup-result.schema.json  batch-summary.schema.json  case-result.schema.json  copy-output.schema.json  count-by-size-output.schema.json  count-summary.schema.json  del-result.schema.json  delete-output.schema.json  diff-output.schema.json  edit-loop-output.schema.json  edit-output.schema.json  error-output.schema.json  extract-output.schema.json  get-result.schema.json  hash-output.schema.json  list-entry.schema.json  move-output.schema.json  outline-output.schema.json  prune-backups-output.schema.json  query-output.schema.json  read-output.schema.json  regex-output.schema.json  replace-result.schema.json  rollback-result.schema.json  scope-result.schema.json  search-match.schema.json  set-result.schema.json  transform-result.schema.json  wal-recovery.schema.json  wal-stats-output.schema.json  write-output.schema.json  write-risk-assessment.schema.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: batch_parse.rs  extract_json.rs
locales/: en.toml  pt-BR.toml
skill/atomwrite-en/: SKILL.md
skill/atomwrite-pt/: SKILL.md
src/: atomic.rs  binary_detect.rs  checksum.rs  cli.rs  cli_args.rs  config.rs  constants.rs  error.rs  file_io.rs  lang_utils.rs  lib.rs  line_endings.rs  lock.rs  main.rs  ndjson_types.rs  output.rs  path_safety.rs  platform.rs  signal.rs  syntax_check.rs  wal.rs  xattr_restore.rs
src/commands/: apply.rs  backup.rs  batch.rs  calc.rs  case.rs  copy.rs  count.rs  del.rs  delete.rs  diff.rs  edit.rs  edit_loop.rs  extract.rs  get.rs  hash.rs  list.rs  mod.rs  move.rs  outline.rs  path_resolution.rs  prune_backups.rs  query.rs  read.rs  regex_gen.rs  replace.rs  rollback.rs  scope.rs  search.rs  set.rs  transform.rs  wal_stats.rs  write.rs
supply-chain/: config.toml
tests/: cli_apply.rs  cli_backup.rs  cli_batch.rs  cli_calc.rs  cli_case.rs  cli_concurrency.rs  cli_copy.rs  cli_count.rs  cli_delete.rs  cli_diff.rs  cli_edit.rs  cli_extract.rs  cli_gap020_diff_workspace.rs  cli_gap021_scope_readonly.rs  cli_get_del.rs  cli_hash.rs  cli_list.rs  cli_max_filesize.rs  cli_move.rs  cli_outline.rs  cli_query.rs  cli_read.rs  cli_regex.rs  cli_replace.rs  cli_rollback.rs  cli_scope.rs  cli_search.rs  cli_set.rs  cli_transform.rs  cli_v0121_apply_keep.rs  cli_v0121_backup_keep_flag.rs  cli_v0121_batch_keep.rs  cli_v0121_edit_backup.rs  cli_v0121_edit_loop.rs  cli_v0121_help_driven.rs  cli_v0121_prune_backups.rs  cli_v0121_rollback_backup.rs  cli_v0121_sequential_drift.rs  cli_v0123_backup_default.rs  cli_v0123_hyphen_values.rs  (+25 more)
tests/common/: mod.rs
tests/snapshots/: snapshot_write__batch_summary_structure.snap  snapshot_write__edit_output_structure.snap  snapshot_write__error_invalid_input_structure.snap  snapshot_write__error_not_found_structure.snap  snapshot_write__error_workspace_jail_structure.snap  snapshot_write__read_output_structure.snap  snapshot_write__replace_result_structure.snap  snapshot_write__search_match_structure.snap  snapshot_write__write_output_structure.snap
xtask/: Cargo.toml
xtask/src/: main.rs
