[package]
name = "atomwrite"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Atomic file operations CLI for LLM agents — read, write, edit, search, replace with NDJSON output"
authors = ["Danilo Aguiar <daniloaguiarbr@pm.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/daniloaguiarbr/atomwrite"
documentation = "https://docs.rs/atomwrite"
keywords = ["cli", "atomic-write", "llm", "ndjson", "file-operations"]
categories = ["command-line-utilities", "filesystem"]
exclude = [
    ".claude/",
    ".vscode/",
    "docs_prd/",
    "docs_rules/",
    "CLAUDE.md",
    "AGENTS.md",
    "MEMORY.md",
    "graphrag.sqlite",
    "graphrag.sqlite-shm",
    "graphrag.sqlite-wal",
    ".ingest-queue.sqlite",
    ".ingest-queue.sqlite-shm",
    ".ingest-queue.sqlite-wal",
]

[dependencies]
clap = { version = "4", features = ["derive", "env", "wrap_help", "string"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
schemars = "1"
thiserror = "2"
anyhow = "1"
tempfile = "3"
blake3 = "1"
rayon = "1"
crossbeam-channel = "0.5"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
signal-hook = "0.3"
memmap2 = "0.9"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
ignore = "0.4"
similar = "3"
filetime = "0.2"
human-panic = "2"
grex = "1.4"
fend-core = "1.5"
ast-grep-core = "0.43"
ast-grep-language = "0.43"
same-file = "1"
sys-locale = "0.3"
rust-i18n = "3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
insta = { version = "1", features = ["json"] }
proptest = "1"
regex = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges.maintenance]
status = "actively-developed"
