[workspace]
members = ["xtask"]

[package]
name = "atomwrite"
version = "0.1.24"
edition = "2024"
rust-version = "1.88"
description = "Atomic file operations CLI for LLM agents — read, write, edit, search, replace with NDJSON output"
authors = ["Danilo Aguiar <daniloaguiarbr@pm.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/daniloaguiarbr/atomwrite"
documentation = "https://docs.rs/atomwrite"
keywords = ["cli", "atomic-write", "llm", "ndjson", "file-operations"]
categories = ["command-line-utilities", "filesystem"]
exclude = [
    ".claude/",
    ".vscode/",
    "docs_prd/",
    "docs_rules/",
    "CLAUDE.md",
    "AGENTS.md",
    "MEMORY.md",
    "graphrag.sqlite",
    "graphrag.sqlite-shm",
    "graphrag.sqlite-wal",
    ".ingest-queue.sqlite",
    ".ingest-queue.sqlite-shm",
    ".ingest-queue.sqlite-wal",
    "gaps.md",
]

[dependencies]
clap = { version = "4", features = ["derive", "env", "wrap_help", "string"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
mimalloc = { version = "0.1", default-features = false }
memchr = "2"
schemars = "1"
thiserror = "2"
anyhow = "1"
tempfile = "3"
walkdir = "2"
blake3 = "1"
rayon = "1"
crossbeam-channel = "0.5"
regex = "1"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "json", "fmt", "ansi", "std", "registry", "tracing-log"] }
tracing-appender = "0.2"
tracing-error = "0.2"
memmap2 = "0.9"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
ignore = "0.4"
similar = "3"
filetime = "0.2"
human-panic = "2"
grex = "1.4"
fend-core = "1.5"
ast-grep-core = "0.43"
ast-grep-language = "0.43"
same-file = "1"
unicode-normalization = "0.1"
sys-locale = "0.3"
rust-i18n = "4"
# v0.1.12 — new dependencies for resolving the Top 12 gaps + v14 Tier 3
reflink-copy = "0.1"   # G64: O(1) copy-on-write backup on APFS/btrfs/XFS
content_inspector = "0.2"  # G41: accurate binary/text detection (UTF-16LE aware)
strsim = "0.11"        # G116: fuzzy match cascade strategy 9 (context-aware)
heck = "0.5"           # v14 Tier 3: identifier case conversion (case subcommand)
serde_yaml = "0.9"     # G44: multi-rule YAML for transform subcommand
indexmap = { version = "2", features = ["serde"] }  # v14 Tier 3: preserve JSON key order
toml_edit = "0.22"     # v14 Tier 3: TOML editor preserving comments/formatting
# v0.1.12 — tree-sitter-language-pack for G72 real syntax check + v14 query/outline.
# Downloads parsers on first use (cache local); keeps install footprint small while
# enabling AST validation across 305 languages. See src/syntax_check.rs and
# src/commands/query.rs/outline.rs.
tree-sitter-language-pack = { version = "1.8", default-features = false, features = ["download", "dynamic-loading"] }
# v0.1.19 G122: direct tree-sitter dep for S-expression Query/QueryCursor APIs (language-pack only re-exports Language).
tree-sitter = "0.26"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["fs"] }
libc = "0.2"
signal-hook = "0.4"
xattr = "1"            # G39: extended attribute preservation (macOS/Linux)
# fd-lock 4 is not used directly: the project's #![deny(unsafe_code)] policy
# is incompatible with fd-lock's RwLockWriteGuard self-referential pattern.
# G54 advisory locking is implemented via nix::fcntl::flock (Unix) and a
# no-op stub (Windows) in src/lock.rs.

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Console"] }
ctrlc = "3.5"

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "0.38", features = ["fs"] }  # G114: ftruncate for in-place inode-preserving writes
nix = { version = "0.31", features = ["fs"] }
libc = "0.2"
signal-hook = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
insta = { version = "1", features = ["json"] }
proptest = "1"
regex = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tracing-test = "0.2"
filetime = "0.2"

[[bench]]
name = "hash_benchmark"
harness = false

[[bench]]
name = "read_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = true
debug = false

[profile.dev.package."*"]
opt-level = 2

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[badges.maintenance]
status = "actively-developed"

[features]
# Opt-in property tests that may take longer than the default budget.
# Run with: cargo test --features slow-tests
slow-tests = []
